Unified: Fix condition of showing IME feature pod

This CL fixes the condition of IME feature pod button to be shown.
It should hide the button when a separate IME tray is shown in Shelf.

TEST=manual
BUG=882824

Change-Id: I4907f3cb01facbcbe7e14cd3329c413bb1adce24
Reviewed-on: https://chromium-review.googlesource.com/c/1255753
Reviewed-by: James Cook <jamescook@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#596960}