ash/ime/ime_controller.cc
@@ -130,6 +130,7 @@ void ImeController::SetImesManagedByPolicy(bool managed) {
 }
 
 void ImeController::ShowImeMenuOnShelf(bool show) {
+  is_menu_active_ = show;
   Shell::Get()->system_tray_notifier()->NotifyRefreshIMEMenu(show);
 }
 
